IAC/Lab3/modules/aws_networking/main.tf
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "iti_vpc"
  }
}

resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name = "iti_igw"
  }
}
data "aws_availability_zones" "available" {
  state = "available"
}
